Update on the media query

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section class="mov" id="movies">
     <div class="mov-flex">
       <a href="#" class="mov-link-carosel">
-        <div id="carouselExampleCaptions" class="carousel slide mov-img" style="width: 78%;">
+        <div id="carouselExampleCaptions" class="carousel slide mov-img">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
