--- a/login.html
+++ b/login.html
@@ -51,11 +51,14 @@
       </div>
     </nav>
 
-    <div class="hero-content" id="home">
-      <img src="img/logo.png" alt="" width="10%" class="rotate">
+    <div class="hero-content login-form" id="home">
       <h1 class="hero-title">CINE<span class="hero-subtitle2">SPHERE</span></h1>
       <p class="hero-subtitle">- Where Stories Comes to Life -</p>
-      <button class="btn btn-outline-light hero-search" type="submit"><a href="login.html">Login</a></button>
+      <form action="" method="post">
+        <input type="email" name="Email" id="" placeholder="Email Address">
+        <input type="password" name="password" id="" placeholder="Password">
+      </form>
+      <button class="btn btn-outline-light hero-search" type="submit"><a href="main.html">Login</a></button>
     </div>
 
   </div>
