--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <img src="img/logo.png" alt="" width="10%" class="rotate">
       <h1 class="hero-title">CINE<span class="hero-subtitle2">SPHERE</span></h1>
       <p class="hero-subtitle">- Where Stories Comes to Life -</p>
-      <button class="btn btn-outline-light hero-search" type="submit"><a href="login.html">Login</a></button>
+      <!-- <button class="btn btn-outline-light hero-search" type="submit"><a href="login.html">Login</a></button> -->
+      <a href="login.html" class="hero-search">Login</a>
     </div>
 
   </div>
