--- a/login.html
+++ b/login.html
@@ -58,7 +58,8 @@
         <input type="email" name="Email" id="" placeholder="Email Address">
         <input type="password" name="password" id="" placeholder="Password">
       </form>
-      <button class="btn btn-outline-light hero-search" type="submit"><a href="main.html">Login</a></button>
+      <!-- <button class="btn btn-outline-light hero-search" type="submit"><a href="main.html">Login</a></button> -->
+      <a href="main.html" class="hero-search">Login</a>
     </div>
 
   </div>
