--- a/login.html
+++ b/login.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JFS: Where Stories Come to Life</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="style.css">
+  </head>
 <body>
   <div class="hero hero-md">
     <nav class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
@@ -58,11 +58,18 @@
         <input type="email" name="Email" id="email" placeholder="Email Address">
         <input type="password" name="password" id="pswd" placeholder="Password">
         <p id="loginError" class="error"></p>
-        <button class="btn btn-outline-light hero-search" type="submit">
-          <a href="main.html" type="submit">Login</a>
-        </button>
+        <a href="main.html" id="link">
+          <button class="btn btn-outline-light hey" type="submit">
+            Login
+          </button>
+        </a>
       </form>
-      <!-- <a href="main.html" class="hero-search">Login</a> -->
+      <!-- <a href="main.html">
+        <button class="btn btn-outline-light hey" type="submit">
+          Login
+        </button>
+        
+      </a> -->
     </div>
 
   </div>
